media purge feature + fix for auto rotate
